--- a/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <!-- INTERFACE -->
-        <cc:interface>        
+    <cc:interface>        
         <cc:attribute name="estudiante" type="net.delsas.saitae.entities.Estudiante"/>
         <cc:attribute name="persona" required="true" type="net.delsas.saitae.entities.Persona"/>
         <cc:attribute name="departamentoLista" required="true"/>
@@ -15,26 +15,27 @@
         <cc:attribute name="departamento" required="true"/>
         <cc:attribute name="municipio" required="true"/>
         <cc:attribute name="municipioLista" required="true"/>
-        <cc:attribute name="listenerA" method-signature="java.lang.Object action( org.primefaces.event.SelectEvent )" default="null"/>
-        <cc:attribute name="t" default="0" type="java.lang.Integer"/>        
+        <cc:attribute name="listenerA" method-signature="void onItemSelect2( org.primefaces.event.SelectEvent )"/>
+        <cc:attribute name="t" default="0" type="java.lang.Integer"/>
+        <cc:attribute name="onComplete" required="true" method-signature="java.util.List java.lang.String completeText( java.lang.String )"/>
     </cc:interface>
 
     <!-- IMPLEMENTATION -->
-    <cc:implementation>  
+    <cc:implementation>          
         <f:event type="preRenderView" listener="#{axiliarController.setTipo(cc.attrs.t)}"/>
         <h:panelGrid columns="3">
             <p:outputLabel for="dui" value="DUI: "/>
             <p:autoComplete id="dui" value="#{cc.attrs.dui}" required="true" type="int"
-                         title="Ingrese el número de documento de identificación de la persona."
-                         completeMethod="#{axiliarController.completeText}">
+                            title="Ingrese el número de documento de identificación de la persona."
+                            completeMethod="#{cc.attrs.onComplete}">
                 <p:ajax event="itemSelect" listener="#{axiliarController.onItemSelect}" update="form0:msgs form1"/>
                 <p:ajax event="itemSelect" listener="#{cc.attrs.listenerA}"/>
-        </p:autoComplete>
+            </p:autoComplete>
             <p:message for="dui" showSummary="true" />
 
-            <p:outputLabel for="nit" value="NIT: "/>
+            <p:outputLabel for="nit" value="NIT: " />
             <p:inputMask id="nit" value="#{cc.attrs.persona.personaNit}" required="#{cc.attrs.t!=8}" 
-                         mask="9999-999999-999-9" title="Ingrese nu NIT"/>
+                         mask="9999-999999-999-9" title="Ingrese nu NIT" />
             <p:message for="nit" showSummary="true" />              
 
             <p:outputLabel for="nombre" value="Nombre: "/>
@@ -45,22 +46,23 @@
             <p:inputText id="apellido" value="#{cc.attrs.persona.personaApellido}" required="true" title="Apellidos de la persona"/>
             <p:message for="apellido" showSummary="true" /> 
 
-            <p:outputLabel for="fecha" value="Fecha de nacimiento: "/>
+            <p:outputLabel for="fecha" value="Fecha de nacimiento: " />
             <p:calendar id="fecha" value="#{cc.attrs.persona.personaNacimiento}" pattern="dd-MM-yyyy" mask="true" 
-                        title="Ingrese la fecha de nacimiento de la persona."/>
+                        title="Ingrese la fecha de nacimiento de la persona." />
             <p:message for="fecha" showSummary="true" />
 
-            <p:outputLabel for="sexo" value="Sexo: "/>
-            <p:selectOneMenu id="sexo" value="#{cc.attrs.persona.personaSexo}" style="width:125px" title="Seleccione su sexo">
+            <p:outputLabel for="sexo" value="Sexo: " />
+            <p:selectOneMenu id="sexo" value="#{cc.attrs.persona.personaSexo}" style="width:125px" title="Seleccione su sexo"
+                             >
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Femenino" itemValue="true" />
                 <f:selectItem itemLabel="Masculino" itemValue="false" />
             </p:selectOneMenu>
             <p:message for="sexo" showSummary="true" />
 
-            <p:outputLabel for="ef" value="Estado Familiar: "/>
+            <p:outputLabel for="ef" value="Estado Familiar: " />
             <p:selectOneMenu id="ef" value="#{cc.attrs.persona.personaEstadoFamiliar}" style="width:125px" 
-                             title="Seleccione el estado familiar de la persona">
+                             title="Seleccione el estado familiar de la persona" >
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Solter@" itemValue="0" />
                 <f:selectItem itemLabel="Casad@" itemValue="1" />
@@ -70,7 +72,7 @@
 
             <p:outputLabel for="nacion" value="Nacionalidad: "/>
             <p:selectOneMenu id="nacion" value="#{cc.attrs.persona.personaNacionalidad}"  required="true"
-                             style="width:125px" label="Seleccione su nacionalidad">
+                             style="width:125px" label="Seleccione su nacionalidad" >
                 <f:selectItem itemLabel="Seleccione" itemValue="9" />
                 <f:selectItem itemLabel="Salvadoreña" itemValue="Salvadoreña" />
                 <f:selectItem itemLabel="Extrangera" itemValue="Extrangera" />
@@ -80,27 +82,27 @@
 
             <h:outputLabel for="dep" value="Departamento de nacimiento: " />
             <p:selectOneMenu id="dep" value="#{cc.attrs.departamento}" required="true" style="width:125px" 
-                             title="Seleccione el departamento de nacimiento">
+                             title="Seleccione el departamento de nacimiento" >
                 <f:selectItems value="#{cc.attrs.departamentoLista}"/>
                 <p:ajax update="mun"/>
             </p:selectOneMenu>
-            <p:column/>
+            <p:column />
 
             <h:outputLabel for="mun" value="Municipio de nacimiento: " />
             <p:selectOneMenu id="mun" value="#{cc.attrs.municipio}" required="true" style="width:125px" 
-                             title="Seleccione el municipio de nacimiento">
+                             title="Seleccione el municipio de nacimiento" >
                 <f:selectItems value="#{cc.attrs.municipioLista}"/>
             </p:selectOneMenu>
-            <p:column/>
+            <p:column />
 
             <p:outputLabel for="zona" value="Zona de residencia: *" />
             <p:selectOneMenu id="zona" value="#{cc.attrs.persona.personaZonaVivienda}" required="true"
-                             style="width:125px" title="Seleccione su Zona donde vive">
+                             style="width:125px" title="Seleccione su Zona donde vive" >
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
                 <f:selectItem itemLabel="Rural" itemValue="0" />
                 <f:selectItem itemLabel="Urbana" itemValue="1" />
             </p:selectOneMenu>
-            <p:messages for="zona" showSummary="true"/>
+            <p:messages for="zona" showSummary="true" />
 
             <p:outputLabel for="cod" value="Código de residencia: " rendered="#{cc.attrs.t==4}"/>
             <p:inputText id="cod" value="#{cc.attrs.persona.personaCodigoResidencia}" 
@@ -115,16 +117,17 @@
 
             <p:outputLabel for="disca" value="Discapacidades: " />
             <p:inputText id="disca" value="#{cc.attrs.persona.personaDiscapacidades}" type="text"
-                         title="Si tiene alguna discapacidad, escríbalas separadas por comas"/>
-            <p:column/>
-            
+                         title="Si tiene alguna discapacidad, escríbalas separadas por comas"
+                         />
+            <p:column />
+
             <p:outputLabel for="enf" value="Enfermedades que padece: " 
                            rendered="#{cc.attrs.t == 8}"/>
             <p:inputText id="enf" value="#{cc.attrs.estudiante.estudianteEnfermedades}" type="text"
                          title="Si padece enfermedades crónicas, escríbalas separadas por comas"
                          rendered="#{cc.attrs.t == 8}"/>
             <p:column rendered="#{cc.attrs.t == 8}"/>
-            
+
             <p:outputLabel for="med" value="Medicamentos permanentes: " 
                            rendered="#{cc.attrs.t == 8}"/>
             <p:inputText id="med" value="#{cc.attrs.estudiante.estudianteMedicamentos}" type="text"
