--- a/saitae-web/src/main/webapp/resources/components/autentia/padres.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/padres.xhtml
@@ -3,14 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:cc="http://xmlns.jcp.org/jsf/composite"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://xmlns.jcp.org/jsf/core">
+      xmlns:p="http://primefaces.org/ui">
 
     <!-- INTERFACE -->
     <cc:interface>
-        <cc:attribute name="persona" required="true" type="net.delsas.saitae.entities.Persona"/>
+        <cc:attribute name="pa" required="true" type="net.delsas.saitae.entities.Persona"/>
         <cc:attribute name="dui" required="true"/>
-        <cc:attribute name="listenerA" required="true" method-signature="java.lang.Object action( org.primefaces.event.SelectEvent )"/>
+        <cc:attribute name="listenerA" required="true" method-signature="void action( org.primefaces.event.SelectEvent )"/>
         <cc:attribute name="t" default="0" type="java.lang.Integer"/>        
         <cc:attribute name="onComplete" required="true" method-signature="java.util.List java.lang.String completeText( java.lang.String )"/>
     </cc:interface>
@@ -29,12 +28,12 @@
             <p:message for="dui#{cc.attrs.t}" showSummary="true" />            
 
             <p:outputLabel for="nombre#{cc.attrs.t}" value="Nombre: "/>
-            <p:inputText id="nombre#{cc.attrs.t}" value="#{cc.attrs.persona.personaNombre}" 
+            <p:inputText id="nombre#{cc.attrs.t}" value="#{cc.attrs.pa.personaNombre}" 
                          required="true" title="Ingrese el nombre de la persona a agregar"/>
             <p:message for="nombre#{cc.attrs.t}" showSummary="true" />
 
             <p:outputLabel for="apellido#{cc.attrs.t}" value="Apellidos: "/>
-            <p:inputText id="apellido#{cc.attrs.t}" value="#{cc.attrs.persona.personaApellido}" 
+            <p:inputText id="apellido#{cc.attrs.t}" value="#{cc.attrs.pa.personaApellido}" 
                          required="true" title="Apellidos de la persona"/>
             <p:message for="apellido#{cc.attrs.t}" showSummary="true" />
         </h:panelGrid>
