--- a/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/persona.xhtml
@@ -95,7 +95,7 @@
             </p:selectOneMenu>
             <p:column />
 
-            <p:outputLabel for="zona#{cc.attrs.t}" value="Zona de residencia: *" />
+            <p:outputLabel for="zona#{cc.attrs.t}" value="Zona de residencia: " />
             <p:selectOneMenu id="zona#{cc.attrs.t}" value="#{cc.attrs.persona.personaZonaVivienda}" required="true"
                              style="width:125px" title="Seleccione su Zona donde vive" >
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
