--- a/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
+++ b/saitae-web/src/main/webapp/WEB-INF/template/plantilla1.xhtml
@@ -14,7 +14,7 @@
         <h:outputStylesheet library="css" name="cssLayout.css"/>
         <h:outputScript library="js" name="locales.js"/>
         <f:event type="preRenderView" listener="#{sessionController.log()}"/>
-        <link rel="Shortcut Icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQnpWNwe4BoNBtI0iyzWf5LBxcFcjLPU7w1vwCzjXJwx5h7rXhX" type="image/jpg" />
+        <link rel="Shortcut Icon" type="image/jpg" dir="rtl" href="intexM.jpeg"/>
     </h:head>
     <!-- color: #ffffff" -->
     <h:body style="background-color: #191919; color: white;">
