--- a/saitae-web/src/main/webapp/resources/components/autentia/estudiante1.xhtml
+++ b/saitae-web/src/main/webapp/resources/components/autentia/estudiante1.xhtml
@@ -16,12 +16,12 @@
     <!-- IMPLEMENTATION -->
     <cc:implementation>
         <h:panelGrid columns="3" columnClasses="label, value">
-            <h:outputLabel for="cent"  value="Centro educativo de procedencia: *" />
+            <h:outputLabel for="cent"  value="Centro educativo de procedencia: " />
             <p:inputText id="cent" value="#{cc.attrs.e.estudianteCentroProcedencia}" required="true"
                          title="Ecriba el nombre completo del Centro Escolar donde solía estudiar."/>
             <p:message for="cent"/>
 
-            <p:outputLabel for="console5" value="Modalidad de bachillerato a la que aplica: *" />
+            <p:outputLabel for="console5" value="Modalidad de bachillerato a la que aplica: " />
             <p:selectOneMenu id="console5" value="#{cc.attrs.mat.grado.gradoPK.gradoModalidad}"  required="true"
                              style="width:125px" title="Seleccione la modalidad de bachillerato en la que va a iscribirse">
                 <f:selectItem itemLabel="Seleccione" itemValue="" />
@@ -30,7 +30,7 @@
             </p:selectOneMenu>
             <p:message for="console5"/>
 
-            <p:outputLabel for="console6" value="Año de bachillerato al que aplica: *" />
+            <p:outputLabel for="console6" value="Año de bachillerato al que aplica: " />
             <p:selectOneMenu id="console6" value="#{cc.attrs.mat.grado.gradoPK.idgrado}"  required="true"
                              style="width:125px" title="Seleccione el año al que desea inscribirse"
                              requiredMessage="Debe elegir un año de bachillerato para poder inscribirse.">
@@ -39,12 +39,12 @@
             </p:selectOneMenu>
             <p:message for="console6"/>
 
-            <h:outputText value="¿Repite año?: *" />
+            <h:outputText value="¿Repite año?: " />
             <p:selectBooleanButton value="#{cc.attrs.mat.matriculaRepite}" required="true"
                                    onLabel="Sí" offLabel="No" style="width:60px"/>
             <p:column/>
 
-            <h:outputText value="¿Cursó parvularia?: *" />
+            <h:outputText value="¿Cursó parvularia?: " />
             <p:selectBooleanButton value="#{cc.attrs.e.estudianteParvularia}" required="true"
                                    onLabel="Sí" offLabel="No" style="width:60px"/>
             <p:column/>
