--- a/saitae-web/src/main/webapp/resources/css/cssLayout.css
+++ b/saitae-web/src/main/webapp/resources/css/cssLayout.css
@@ -9,7 +9,7 @@
     position: relative;
     padding: 5px;
     margin: 10px 0px 0px 0px;
-    background-color: blue;
+    /*background-color: blue;*/
 }
 
 
