--- a/saitae-web/src/main/webapp/resources/css/cssLayout.css
+++ b/saitae-web/src/main/webapp/resources/css/cssLayout.css
@@ -16,22 +16,20 @@
 
 .center_content {
     position: inherit;
-    /*background-color: #dddddd;*/
     padding: 5px;
     margin: auto;
 }
 
 
 .content {
-    /*background-color: #dddddd;*/
     padding: 5px;
-    margin: 0px 310px 0px 0px;
+    width: 80%;
 }
 #right {
     float: right;
     background-color: #ece3a5;
     padding: 5px;
-    width: 290px;
+    width: 20%;
 }
 
 
